[gd_scene load_steps=12 format=3 uid="uid://bh861ens8p1kx"]

[ext_resource type="Script" path="res://boot/intro/intro.gd" id="1_5i7y0"]
[ext_resource type="Script" path="res://boot/scripts/to_next.gd" id="2_4keyd"]
[ext_resource type="PackedScene" uid="uid://bhh0i8vm2o6m7" path="res://boot/title_screen/title_screen.tscn" id="3_53b1d"]
[ext_resource type="PackedScene" uid="uid://jfxvdv88hlmx" path="res://music_player/triggers/music_trigger.tscn" id="4_u8nlj"]
[ext_resource type="PackedScene" uid="uid://bhqaw3q6qu30m" path="res://ui/dialogue_loader/dialogue_box.tscn" id="4_yfyia"]
[ext_resource type="Texture2D" uid="uid://ve6x2obpvcmd" path="res://world_loader/interactables/drops/coin/Sprite-0002.png" id="5_owkm2"]
[ext_resource type="Texture2D" uid="uid://buuf1t3bvxrcy" path="res://player_load/items/sword.png" id="6_yim8y"]
[ext_resource type="Texture2D" uid="uid://bpuoa4hsfvj0t" path="res://world_loader/interactables/drops/key/simple_key.png" id="7_tqku6"]
[ext_resource type="FontFile" uid="uid://df0ks0cymrjb7" path="res://ui/fonts/Teeny Tiny Pixls.otf" id="9_axrma"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4efeq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_owkm2")
}],
"loop": true,
"name": &"one",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yim8y")
}],
"loop": true,
"name": &"two",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tqku6")
}],
"loop": true,
"name": &"zero",
"speed": 5.0
}]

[sub_resource type="FontVariation" id="FontVariation_5dvev"]
base_font = ExtResource("9_axrma")

[node name="intro" type="Node2D" node_paths=PackedStringArray("txt_del", "img_del", "next_scene", "mural_anim", "d_box")]
script = ExtResource("1_5i7y0")
txt_del_arr = Array[float]([14.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 3.0])
txt_arr = Array[String](["", "there is a legend in the land of whatever", "that a great evil existed long ago
", "which will come back at somepoint", "and a hero will fight it", "", "", "", ""])
img_del_arr = Array[float]([14.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 3.0])
img_arr = Array[String](["zero", "one", "two", "three", "four", "five", "six", "seven", "eight"])
txt_del = NodePath("dialogue_box/txt_del")
img_del = NodePath("anim_mural/img_del")
next_scene = NodePath("to_next")
mural_anim = NodePath("anim_mural")
d_box = NodePath("dialogue_box")

[node name="temp_mural" type="ColorRect" parent="."]
offset_left = 11.0
offset_top = 9.0
offset_right = 166.0
offset_bottom = 99.0
color = Color(0.0784314, 0, 0.372549, 1)

[node name="anim_mural" type="AnimatedSprite2D" parent="."]
position = Vector2(11, 9)
sprite_frames = SubResource("SpriteFrames_4efeq")
animation = &"two"
centered = false

[node name="img_del" type="Timer" parent="anim_mural"]
one_shot = true

[node name="dialogue_box" parent="." instance=ExtResource("4_yfyia")]

[node name="border" parent="dialogue_box" index="0"]
visible = false

[node name="fill" parent="dialogue_box" index="1"]
visible = false

[node name="n_label" parent="dialogue_box" index="2"]
visible = false

[node name="m_label" parent="dialogue_box" index="3"]
offset_left = 9.0
offset_top = 106.0
offset_right = 172.0
offset_bottom = 142.0
text = "there is a legend in the land of 
kohoma"
horizontal_alignment = 1

[node name="txt_del" type="Timer" parent="dialogue_box"]
one_shot = true

[node name="music_trigger" parent="." instance=ExtResource("4_u8nlj")]
track_name = "legend_intro"

[node name="to_next" type="Node2D" parent="." node_paths=PackedStringArray("del")]
script = ExtResource("2_4keyd")
ins = ExtResource("3_53b1d")
del = NodePath("..")
useready = false

[node name="show_timer" type="Timer" parent="to_next"]
wait_time = 65.0
one_shot = true
autostart = true

[node name="temp skip" type="Label" parent="."]
offset_left = 127.0
offset_top = 165.0
offset_right = 167.0
offset_bottom = 172.0
theme_override_fonts/font = SubResource("FontVariation_5dvev")
theme_override_font_sizes/font_size = 5
text = "enter skip"

[connection signal="timeout" from="anim_mural/img_del" to="." method="_on_img_del_timeout"]
[connection signal="timeout" from="dialogue_box/txt_del" to="." method="_on_txt_del_timeout"]
[connection signal="timeout" from="to_next/show_timer" to="to_next" method="_on_show_timer_timeout"]

[editable path="dialogue_box"]
